chore: Improve unit test coverage